fix bug in auth base

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,4 @@ logging:
   level:
     org:
       springframework:
-        security:
-          web:
-            FilterChainProxy=DEBUG:
+        security=DEBUG:
