--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,10 +6,11 @@ spring:
     enabled: true
     baseline-on-migrate: true
     locations: filesystem:src/main/resources/db/migration
+    repeatable-sql-migration-prefix:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
   datasource:
@@ -28,4 +29,7 @@ auth:
 logging:
   level:
 #    root: debug
-    org.springframework.security: DEBUG
+    org.springframework.security: info
+
+hibernate:
+  enable_lazy_load
