--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,18 @@
             <version>2.12.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.5.11</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-security</artifactId>
+            <version>1.5.11</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
